# EvolutionConstructedFeatures

./: README.md  classification.csv  main.py  pyproject.toml
evo_features/: __initi__.py  eco_feature.py  image_operators.py
