[tool.poetry]
name = "eco-features"
version = "1.0"
description = "ML test to develop evolution constructed features"
authors = ["physici"]
readme = "README.md"
packages = [{include = "eco_features"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scikit-image = ">=0.20.0"
scikit-learn = "^1.3.0"
numpy = ">=1.24.3"
matplotlib = ">=3.7.1"
scipy = ">=1.10.1"
pandas = "^2.2.1"

[tool.poetry.group.dev.dependencies]
spyder-kernels = ">2.5"
pylsp-mypy = "^0.6.5"
mypy = "<=1.3.0"

[tool.pylsp-mypy]
enabled = true
live_mode = false
dmypy = true
strict = true

[tool.mypy]
# allow_untyped_globals = true
allow_redefinition = true
ignore_missing_imports = true
ignore_missing_imports_per_module = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
